Improved TelegramMessageHandler class design using InlineKeyboard and InlineKeyboardContainer Improved Telegram Message design Introduced AmazonLogger to improve logging experience Removed unnecessary colors from Color Moved PriceExtractor from extractor to util Refactored extractor to scraper Improved AmazonItem Improved Price Replaced String.format() with experimental feature .formatted() Introduced code block(experimental feature) for TelegramMessageHandler Lots of minor changes